--- a/simpleoa/src/main/resources/static/regist.html
+++ b/simpleoa/src/main/resources/static/regist.html
@@ -7,7 +7,7 @@
 <body>
 <form action="/user/regist" method="post">
     用户名：<input type="text" name="username"><br>
-    密码：<input type="password" name="password"><br>
+    密码：<input type="text" name="password"><br>
     <input type="submit" value="注册验证"><br>
     <input type="button" onclick="javascript:window.location.href='login.html'" value="返回登录界面">
 </form>
